--- a/ecart/package.json
+++ b/ecart/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.3",
     "cleave.js": "^1.6.0",
     "notistack": "^2.0.4",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
